# DouyinDemo

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/gmm/www/douyin/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: FaceTrack.cpp  FaceTrack.h  native-lib.cpp
app/src/main/cpp/include/seeta/: SeetaDetectorExport.h  SeetaFaceTrackerExport.h  SeetaLandmarkerExport.h  SeetaNetExport.h  SeetaRecognizerExport.h
app/src/main/java/com/gmm/www/douyin/: MainActivity.java
app/src/main/java/com/gmm/www/douyin/face/: Face.java  FaceTracker.java
app/src/main/java/com/gmm/www/douyin/filter/: AbstractFboFilter.java  AbstractFilter.java  BigEyeFilter.java  CameraFilter.java  FilterChain.java  FilterContext.java  RecordFilter.java  ScreenFilter.java
app/src/main/java/com/gmm/www/douyin/record/: EGLEnv.java  MediaRecorder.java
app/src/main/java/com/gmm/www/douyin/test/: QuickSort.java  Test.java  View.java
app/src/main/java/com/gmm/www/douyin/test2/: View.java
app/src/main/java/com/gmm/www/douyin/utils/: CameraHelper.java  ImageUtils.java  OpenGLUtils.java
app/src/main/java/com/gmm/www/douyin/widget/: CameraRender.java  CameraView.java  RecordButton.java
app/src/main/res/drawable/: record_speed_button_background.xml  record_speed_button_text.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: base_frag.frag  base_vert.vert  bigeye_frag.frag  camera_frag.frag  camera_vert.vert
app/src/test/java/com/gmm/www/douyin/: ExampleUnitTest.java
